DAQ-3560 Take Scannable units for MScan
- When passed to Malcolm will be written into Nexus over EGU, so make
best attempt

Change-Id: I9151a4a5e6232f1e3aab9e62c14d2fdbf551f9ed